@@ -1,8 +1,9 @@
 2003 Jan 22
 
     * NSNumber+additions: Added -modulo: method.
-    * Foundation bundle: added NSFileManager extensions
+    * Foundation bundle: added NSFileManager extensions; added missing constants
     * Documentation/Additions.txt: new file
+    
 2003 Jan 20
 
     * GNUMakefile: Removed inclusion of source-distribution.make, as it is
